# cookiecutter-django-react-ansible

./: LICENSE.txt  README.md  cookiecutter.json  requirements.txt
.github/workflows/: ci.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: .dockerignore  .editorconfig  .env  .gitignore  Dockerfile  Jenkinsfile  README.md  Vagrantfile  compose.yaml  exec_backend.sh  provision_dev_environment.sh  provision_podman.sh  ssh_backend.sh  ssh_frontend.sh  ssh_provisioning.sh  vagrant_ssh.sh
{{ cookiecutter.project_slug }}/backend_app/: .coveragerc  .flake8  .watchmanconfig  Makefile  gunicorn_config.py  manage.py  mypy.ini  pyproject.toml  requirements.in  requirements.txt  start_dev_server.sh
{{ cookiecutter.project_slug }}/backend_app/tests/: helpers.py  test_admin.py
{{ cookiecutter.project_slug }}/backend_app/{{ cookiecutter.project_slug }}/: asgi.py  settings.py  urls.py  wsgi.py
{{ cookiecutter.project_slug }}/docs/: backend_app.md  configuring_pycharm.md  frontend_app.md  limitations_and_warnings.md  other_tools.md  provisioning.md
{{ cookiecutter.project_slug }}/docs/other_tools/: config_check.md  load_testing.md
{{ cookiecutter.project_slug }}/frontend_app/: .env  .env.development  README.md  check_environment.js  eslint.config.js  package-lock.json  package.json  set_dev_env_vars.sh  start_dev_server.sh  start_local_dev.sh
{{ cookiecutter.project_slug }}/frontend_app/public/: index.html
{{ cookiecutter.project_slug }}/other_tools/: testssl_dev.sh
{{ cookiecutter.project_slug }}/provisioning/: ansible-vagrant.cfg  ansible.cfg  ansible_podman.cfg  ansible_vagrant.cfg  dev_ssh_config  playbook.yml  podman_dev_key  podman_dev_key.pub  pyproject.toml  requirements.in  requirements.txt  requirements.yml
(+94 files in other folders)
