[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
dependencies = [
    "coverage[toml]>=7.9.2",
    "django>=5.2,<6.0",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-stubs>=5.2.2",
    "djangorestframework>=3.16.0",
    "gunicorn>=23.0.0",
    "ipython>=9.4.0",
    "mypy>=1.17.0",
    "pip-audit>=2.9.0",
    "psycopg[binary]>=3.2.9",
    "pytz>=2025.2",
    "pywatchman>=3.0.0",
    "ruff>=0.12.4",
    "selenium>=4.34.2",
    "tzdata>=2025.2",
    "uvicorn[standard]>=0.35.0",
]

# https://docs.astral.sh/ruff/configuration/#using-pyprojecttoml

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
]

[tool.ruff]
exclude = ["venv"]
line-length = 88
target-version = "py312"

[tool.coverage.run]
source = ["."]
branch = true
omit = ["venv/*", "tests/*"]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "coverage_html_report"

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file

[tool.mypy]
python_version = "3.12"
plugins = "mypy_django_plugin.main"
files = "."
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.django-stubs]
django_settings_module = "{{ cookiecutter.project_slug }}.settings"

[[tool.mypy.overrides]]
module = "*.migrations.*"
# Ignore any errors in autogenerated Django migrations
ignore_errors = true